# crane_plus

./: .dockerignore  .gitignore  README.md  crane_plus-not-released.rolling.repos
.docker/: README.md  build_source.sh
.docker/source/: Dockerfile
.github/workflows/: build_docker_image.yml  container_ci.yml  industrial_ci.yml
crane_plus/: CHANGELOG.rst  CMakeLists.txt  package.xml
crane_plus_control/: CHANGELOG.rst  CMakeLists.txt  README.md  crane_plus_hardware.xml  package.xml
crane_plus_control/config/: crane_plus_controllers.yaml  start_positions.yaml
crane_plus_control/include/crane_plus_control/: crane_plus_driver.hpp  crane_plus_hardware.hpp  crane_plus_interface.hpp  visibility_control.h
crane_plus_control/launch/: crane_plus_control.launch.py
crane_plus_control/src/: crane_plus_control_node.cpp  crane_plus_driver.cpp  crane_plus_hardware.cpp  crane_plus_interface.cpp
crane_plus_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
crane_plus_description/crane_plus_description/: robot_description_loader.py
crane_plus_description/env-hooks/: crane_plus_description.dsv.in
crane_plus_description/launch/: display.launch.py  display.rviz
crane_plus_description/meshes/collision/: Hand_collision_20201013.stl  Link1_collision_20201013.stl  Link2_collision_20201013.stl  Link3_collision_20201013.stl  Link4_collision_20201013.stl  body_collision_20201013.stl  link1.stl  link2.stl  link3.stl
crane_plus_description/meshes/visual/: Link1_20201013.stl  Link2_20201013.stl  RT-CRANE+_Hand.stl  RT-CRANE+_Link1.stl  body.stl  hand.stl  link3.stl  link4.stl
crane_plus_description/test/: dummy_controllers.yaml  test_robot_description_loader.py
crane_plus_description/urdf/: camera.urdf.xacro  camera_stand.urdf.xacro  camera_stand.xacro  crane_plus.gazebo  crane_plus.gazebo.xacro  crane_plus.gazebo_ros2_control.xacro  crane_plus.ros2_control.xacro  crane_plus.urdf.xacro  crane_plus.xacro
crane_plus_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
crane_plus_examples/config/: camera_info.yaml
crane_plus_examples/launch/: camera_example.launch.py  camera_example.rviz  demo.launch.py  example.launch.py  gripper_control.launch.py
crane_plus_examples/scripts/: aruco_detection.py  gripper_control.py  pick_and_place.py
crane_plus_examples/src/: aruco_detection.cpp  color_detection.cpp  control_two_arms.cpp  gripper_control.cpp  joint_values.cpp  pick_and_place.cpp  pick_and_place_tcp.cpp  pick_and_place_tf.cpp  pick_and_place_tf_tcp.cpp  pose_groupstate.cpp
crane_plus_examples_py/: README.md  package.xml  setup.cfg  setup.py
crane_plus_examples_py/config/: crane_plus_moveit_py_examples.yaml
crane_plus_examples_py/crane_plus_examples_py/: aruco_detection.py  color_detection.py  gripper_control.py  joint_values.py  pick_and_place.py  pick_and_place_tf.py  pose_groupstate.py  utils.py
crane_plus_examples_py/launch/: camera_example.launch.py  example.launch.py
crane_plus_examples_py/scripts/: color_detection.py  joint_values.py  pick_and_place.py  utils.py
crane_plus_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
crane_plus_gazebo/config/: gazebo_controllers.yaml
crane_plus_gazebo/gui/: gui.config
crane_plus_gazebo/launch/: crane_plus_gazebo.launch.py  crane_plus_with_aruco_cube.launch.py  crane_plus_with_red_cube.launch.py  crane_plus_with_table.launch.py
crane_plus_gazebo/models/aruco_cube_0/: model.config  model.sdf
crane_plus_gazebo/models/aruco_cube_0/meshes/: aruco_cube_0.dae
crane_plus_gazebo/worlds/: table.sdf  table.world  table_with_aruco_cube.sdf  table_with_red_cube.sdf
crane_plus_ign/: CMakeLists.txt  package.xml
crane_plus_ign/include/crane_plus_ign/: visibility_control.h
crane_plus_ign/launch/: ign_gazebo.launch.py
crane_plus_ign/src/: joint_trajectory_converter.cpp
crane_plus_ign/worlds/: table.sdf
crane_plus_ignition/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
crane_plus_ignition/gui/: gui.config
crane_plus_ignition/launch/: crane_plus_ignition.launch.py
crane_plus_ignition/worlds/: table.sdf
crane_plus_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
crane_plus_moveit_config/config/: controllers.yaml  crane_plus.srdf  crane_plus_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  sensors_3d.yaml
crane_plus_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  run_move_group.launch.py  run_move_group.rviz  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crane_plus_moveit_config/share/ament_index/resource_index/package_run_dependencies/: crane_plus_moveit_config
install/crane_plus_moveit_config/share/ament_index/resource_index/parent_prefix_path/: crane_plus_moveit_config
install/crane_plus_moveit_config/share/crane_plus_moveit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/crane_plus_moveit_config/share/crane_plus_moveit_config/cmake/: crane_plus_moveit_configConfig-version.cmake  crane_plus_moveit_configConfig.cmake
install/crane_plus_moveit_config/share/crane_plus_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
install/crane_plus_moveit_config/share/crane_plus_moveit_config/launch/: demo.launch.py  run_move_group.launch.py
log/: latest_build
