<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_plus_gazebo</name>
  <version>2.0.1</version>
  <description>CRANE+ V2 gazebo simulation package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>Apache License 2.0</license>

  <author email="s.aoki@rt-net.jp">Shota Aoki</author>
  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>
  <author email="yusuke.kato@rt-net.jp">Yusuke Kato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>controller_manager</depend>
  <depend>gripper_controllers</depend>
  <depend>ros2_controllers</depend>
  <depend>ros_gz</depend>
  <depend>robot_state_publisher</depend>
  <depend>crane_plus_description</depend>
  <depend>crane_plus_moveit_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
